# skill_demo

./: .gitignore  main.py  pyproject.toml  test_video_skill.py  test_video_skill_subagent.py
meeting-notes/: SKILL.md
skills/: _path.py
skills/chart/: SKILL.md
skills/chart/scripts/: generate.py  render.py
skills/data-local/: SKILL.md
skills/data-local/scripts/: extract.py
skills/data-web/: SKILL.md
skills/data-web/scripts/: search.py
skills/pptx/scripts/office/: pack.py
skills/summarize/: SKILL.md
skills/summarize/scripts/: summarize.py
skills/table/: SKILL.md
skills/table/scripts/: generate.py
skills/text-stats/: SKILL.md
skills/text-stats/references/: targets.md
skills/text-stats/scripts/: analyze.py
skills/video-batch-compare/: SKILL.md
skills/video-batch-compare/references/: gotchas.md
skills/video-meeting-notes/: SKILL.md
skills/video-meeting-notes/references/: gotchas.md  output-format.md  pipeline.md
skills/video-meeting-notes/scripts/: compose_notes.py  extract_frames.py  transcribe.py
