[project]
name = "test-langchain-skill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.5.3",
    "langchain-openai>=1.1.15",
    "openai>=2.32.0",
    "opencv-python>=4.13.0.92",
    "scenedetect>=0.6.7.1",
    "yt-dlp>=2026.3.17",
]
